--- a/src/app/backend/backend.component.html
+++ b/src/app/backend/backend.component.html
@@ -61,11 +61,12 @@
       <mat-hint align ="end"></mat-hint>
       </mat-form-field></td>
     </tr></table>
-  </form>
+  
   <div class="example-label"></div>
   
    
-    <button mat-stroked-button color="primary">Submit</button>
+    <button mat-stroked-button color="primary" type="submit">Submit</button>
+    </form>
 </mat-tab>
 
 </mat-tab-group>
